--- a/Sync_Insights/backend/package.json
+++ b/Sync_Insights/backend/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.1",
+        "nodeman": "^1.1.2",
         "nodemon": "^3.1.0"
     }
 }
